@@ -1,3 +1,6 @@
+2007-10-16  Frederik De	Richter <frederik.de.richter@googlemail.com>
+	* src/plugins/rel_nl.py: new version
+
 2007-10-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/WebCal.py: fixed a wrong indent level
 	* src/plugins/Calendar.py: handle divorces, weekdays, easter, eval values in XML
